--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -23,3 +23,4 @@ euclid = { version = "0.20.10", features = ["serde"] }
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.51"
 rand = { version = "0.7.3", features = ["small_rng"] }
+bitflags = "1.2.1"
